--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="weatherResult"></div>
     </div>
     <script>
+        //select id  by dom
         document.getElementById('getWeather').addEventListener('click', getWeather);
 
         async function getWeather() {
