new branch created

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <script>
         //select id  by dom
+        //i am in van branch
         document.getElementById('getWeather').addEventListener('click', getWeather);
 
         async function getWeather() {
