--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <script>
         //select id  by dom
-        //i am in van branch
+        //i am in main branch
         document.getElementById('getWeather').addEventListener('click', getWeather);
 
         async function getWeather() {
